complete the docs
